[package]
name = "pivot"
version = "0.1.0"
edition = "2021"
authors = ["X1r0z <i@exp10it.io>"]
repository = "https://github.com/X1r0z/pivot-rs"
description = "pivot-rs is a lightweight port-forwarding and socks proxy tool written in Rust 🦀"
license = "MIT"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8.5"
rcgen = "0.13.1"
rustls = { version = "0.23.20", default-features = false, features = [
    "std",
    "tls12",
    "ring",
] }
socket2 = "0.5.8"
tokio = { version = "1.42.0", features = ["full"] }
tokio-rustls = { version = "0.26.1", default-features = false, features = [
    "tls12",
    "ring",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
